# pbshm-damage-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_sensor_optimization.ipynb  02_modal_convergence_analysis.ipynb  03_etabs_data_generation.ipynb  coumpute_time.ipynb
scripts/: continue_generation.py  stitching.py  train_dual_branch_dae.py  visualize_balance.py
src/: convergence.py  etabs_api.py  modeling.py  optimization.py  visualization.py
