[project]
name = "pbshm-damage-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comtypes>=1.4.16",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pygad>=3.6.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
]
